--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <embed
-      src="file:///Users/conspd/School/Cloud_Computing/Εργασίες/Cloudsim/cse46787_cloudsim_copy.pdf"
+      src="./cse46787_cloudsim_copy.pdf"
       type="application/pdf"
       width="100%"
       height="1080px"
